# fastfem

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml
.devcontainer/dev/: devcontainer.json
.devcontainer/report/: devcontainer.json
.github/workflows/: deploy-docs.yaml  publish-to-pypi.yaml  render-report.yaml  test.yaml
docs/: theory.md
docs/assets/: bibliography.bib
docs/theory/: index.md
examples/: demo_plotter.py  demo_spectral_poisson.py  demo_spectral_wave.py  demo_wave_equation.py
fastfem/: __init__.py
fastfem/elements/: __init__.py  element.py  element2d.py  linear_simplex2d.py  linear_simplex_mesh2d.py  spectral_element.py  spectral_element2d.py
fastfem/fields/: __init__.py  field.py  field_operations.py  numpy_similes.py  numpy_similes_linalg.py
fastfem/mesh/: __init__.py  fundamentals.py  generator.py
fastfem/plotter/: __init__.py  mesh_visual.py
report/: elements_and_fields.tex  main.tex  plotter.tex  theory.tex
report/figures/: example_wave_timeloop.py  mesher-example1.py
tests/: conftest.py  test_field.py  test_mesher.py
tests/elements/: conftest.py  test_element.py  test_element2d.py  test_element_spectral.py  test_element_spectral2d.py  test_linear_simplex2d.py  test_simplex_mesh2d.py
tests/fields/: test_field.py
tests/fields/similes/: test_shaping.py
tests/plotter/: test_mesh_visual.py
